# human_following_robot_ver_3

./: README.md
human_following/: CMakeLists.txt  package.xml
human_following/include/: IcartStateSubscriber.h  StampedState.h  humanStateSubscriber.h
human_following/src/: icart_BOTH_velo_pid.cpp  icart_pid_each_velo_loop.cpp  icart_pid_each_velo_x_z_control.cpp  icart_pid_velocity_control.cpp  icart_test.cpp  test.cpp
human_following_using_pointcloud/: CMakeLists.txt  package.xml
human_following_using_pointcloud/launch/: run.launch
human_following_using_pointcloud/src/: old_ransac.cpp  ransac.cpp  raw_data.cpp
icart_mini/icart_mini_description/launch/: icart_mini.rviz  icart_mini_rviz.launch  icart_velodyne.rviz
icart_mini/icart_mini_description/urdf/: VLP-16.urdf.xacro  icart_mini.xacro
icart_mini/icart_mini_gazebo/launch/: icart_mini.launch
icart_mini/icart_mini_gazebo/worlds/: model.world
object3d_detector/: CMakeLists.txt  package.xml
object3d_detector/include/: svm.h
object3d_detector/launch/: object3d_detector.launch
object3d_detector/libsvm/: pedestrian_12_3_4h42.model  pedestrian_12_3_4h42_ver_2.model  pedestrian_12_3_4h42_ver_3.model  pedestrian_12_3_4h59.model  pedestrian_15_3_2h46.model  pedestrian_15_3_3h10.model
object3d_detector/src/: object3d_detector.cpp  object3d_detector_cluster.cpp  quang_cluster.cpp  svm_fix.cpp
velodyne/velodyne_driver/launch/: nodelet_manager.launch
velodyne/velodyne_pointcloud/launch/: transform_nodelet.launch
